--- a/partials/includes/topMenu.html
+++ b/partials/includes/topMenu.html
@@ -18,7 +18,9 @@
 
             
             <ul class="nav navbar-nav navbar-right">
-                
+                <li><a href="#/">Content</a></li>
+                <li><a href="#/words">Words</a></li>
+                <li><a href="#/lines">Lines</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
